test/classes/bradc/paramInClass/weirdParamInit4.good
weirdParamInit4.chpl:6: error: invalid generic type specification on class field
